--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -14,6 +14,7 @@
   margin-bottom: 32px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
   cursor: pointer;
+  opacity: 0;
   transition: all .25s ease-out;
 }
 
