--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -15,6 +15,7 @@
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
   cursor: pointer;
   opacity: 0;
+  transform: translateY(200px);
   transition: all .25s ease-out;
 }
 
