--- a/src/components/Film/Film.css
+++ b/src/components/Film/Film.css
@@ -2,8 +2,14 @@
 .film-container {
   width: 100%;
   height: auto;
+  min-height: 100vh;
   position: relative;
   margin-top: 56px;
+}
+
+.film-header-container {
+  opacity: 0;
+  transition: all .25s ease-in;
 }
 
 .film-backdrop {
@@ -11,7 +17,7 @@
   height: auto;
 }
 
-.film-header-container {
+.film-title-container {
   width: 100%;
   background: #2E2E2E;
   color: #fff;
@@ -23,6 +29,9 @@
   width: 100%;
   padding: 10% 0;
   margin: 0 auto;
+  opacity: 0;
+  transform: translateY(200px);
+  transition: all .25s ease-out;
 }
 
 .film-poster {
@@ -40,7 +49,7 @@
 }
 
 @media all and (min-width: 768px) {
-  .film-header-container {
+  .film-title-container {
     padding: 6% 0;
   }
   .film-overview, .film-release-date, .film-vote-average {
@@ -53,7 +62,7 @@
     display: none;
   }
 
-  .film-header-container {
+  .film-title-container {
     padding: 8% 0;
   }
 
