--- a/src/components/Film/Film.css
+++ b/src/components/Film/Film.css
@@ -9,7 +9,8 @@
 
 .film-header-container {
   opacity: 0;
-  transition: all .25s ease-in;
+  transform: translateY(-100%);
+  transition: all .2s ease-out;
 }
 
 .film-backdrop {
@@ -31,7 +32,7 @@
   margin: 0 auto;
   opacity: 0;
   transform: translateY(200px);
-  transition: all .25s ease-out;
+  transition: all .2s ease-out;
 }
 
 .film-poster {
